Thu May 25 14:43:30 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* config.in: Regenerate.

Thu May 25 13:49:17 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Fri 19 May 2000 Eli Zaretskii <eliz@is.elta.co.il>: *
 	config/djgpp/fnchange.lst: Fix bfd/coff-tic54x.c, bfd/coff-tc54x.c
 	and gdb/testsuite/gdb.mi/mi-var-cmd.exp.

Thu May 25 11:09:50 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure.in (AC_OUTPUT): Do not generate tui/Makefile.
	(enable-tui): Convert Makefile configury to use the same mechanism
 	as MI.

	* Makefile.in (BUILD_TUI, TUI_LIBRARY, TUI_DIR, TUI_SRC,
 	TUI_CFLAGS): Delete
	(all-tui): Delete target.
	(tuiWin.o, tuiStack.o, tuiSourceWin.o, tuiSource.o, tuiRegs.o,
 	tuiLayout.o, tuiIO.o, tuiGeneralWin.o, tuiDisassem.o,
 	tuiDataWin.o, tuiData.o, tuiCommand.o, tui.o): New targets.
	(SUBDIR_TUI_OBS, SUBDIR_TUI_SRCS, SUBDIR_TUI_DEPS,
 	SUBDIR_TUI_INITS, SUBDIR_TUI_LDFLAGS, SUBDIR_TUI_CFLAGS,
 	SUBDIR_TUI_ALL, SUBDIR_TUI_CLEAN, SUBDIR_TUI_INSTALL,
 	SUBDIR_TUI_UNINSTALL): Define.

	* TODO: Update.

Thu May 25 11:02:24 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Update.  Mark Kettenis fixed FreeBSD >2.2 support.
	* MAINTAINERS: Update Jim Ingham's address.

2000-05-25  Mark Kettenis  <kettenis@gnu.org>

	Add support for FreeBSD/i386 ELF.
	* i386bsd-nat.c: New file.
	* config/i386/tm-fbsd.h (HAVE_I387_REGS): Define.
	Include "i386/tm-i386.h" instead of "i386/tm-i386b.h".
	(NUM_REGS): Remove redefinition.
	(USE_STRUCT_CONVENTION): Define.
	(i386_float_info): Remove prototype.
	(FLOAT_INFO): Remove define.
	(JB_ELEMENT_SIZE): Define to 4.
	(JB_PC): Define to 0.
	(GET_LONGJMP_TARGET): Define.
	(SIGTRAMP_START, SIGTRAMP_END): Define.
	(SIGCONTEXT_PC_OFFSET): Define.
	(IN_SOLIB_CALL_TRAMPOLINE): Only define if !SVR4_SHARED_LIBS
	* config/i386/nm-fbsd.h (PTRACE_ARG3_TYPE): Define to caddr_t.
	(FETCH_INFERIOR_REGISTERS): Define.
	(ATTACH_DETACH): Define.
	(kernel_u_size): Remove PARAMS.