@@ -1,3 +1,14 @@
+Thu May 25 15:22:12 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* configure.in (AC_CHECK_HEADERS): Check for <dirent.h>,
+ 	<sys/ndir.h>, <sys/dir.h> and <ndir.h>.
+	* config.in, configure: Re-generate.	
+	* gdb_dirent.h: New file
+
+	* infptrace.c: Include "gdb_dirent.h" instead of <sys/dir.h>.
+	* core-aout.c: Ditto.
+	* procfs.c: Include "gdb_dirent.h" instead of <dirent.h>.
+
 Thu May 25 14:43:30 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* config.in: Regenerate.
